fix: header z-index

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -68,6 +68,7 @@
     @include mobile {
       position: fixed;
       inset: 0;
+      z-index: 100;
       display: flex;
       flex-direction: column;
       justify-content: center;
